update api endpoint
